--- a/website/styles/common.scss
+++ b/website/styles/common.scss
@@ -5,9 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
-    SimSun, sans-serif;
+  SimSun, sans-serif;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
+  color: #333;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -24,7 +25,7 @@ ul, li {
 }
 
 a {
-  color: #409eff;
+  color: #333;
   text-decoration: none;
 }
 
