button hover && active

--- a/packages/styles/src/button.scss
+++ b/packages/styles/src/button.scss
@@ -2,12 +2,30 @@
 @import './common/var.scss';
 
 $buttonType: (
-  primary: $--color-primary,
-  success: $--color-success,
-  warning: $--color-warning,
-  danger: $--color-danger,
-  info: $--color-info,
-  default: $--color-white
+  primary: (
+    color: $--color-primary,
+    hover: $--color-primary-lighter
+  ),
+  success: (
+    color: $--color-success,
+    hover: $--color-success-light
+  ),
+  warning: (
+    color: $--color-warning,
+    hover: $--color-warning-light
+  ),
+  danger: (
+    color: $--color-danger,
+    hover: $--color-danger-light
+  ),
+  info: (
+    color: $--color-info,
+    hover: $--color-info-light
+  ),
+  default: (
+    color: $--color-white,
+    hover: $--color-white
+  )
 );
 
 .#{$namespace}-button {
@@ -23,17 +41,17 @@ $buttonType: (
     @if ($type != 'default') {
       &--#{$type} {
         color: $--color-white;
-        background: $color;
-        border: 1px solid $color;
+        background: map-get($color, color);
+        border: 1px solid map-get($color, color);
 
-        &:hover {
-          // background: $--color-#{$type}-light;
-          background: red;
+        &:hover, &:active {
+          background: mix(map-get($color, color), $--color-white, 70%) ;
+          border: 1px solid mix(map-get($color, color), $--color-white, 70%) ;
         }
       }
     } @else {
       &--#{$type} {
-        background: $color;
+        background: map-get($color, color);
         border: 1px solid $--border-color-default;
       }
     }
