--- a/packages/styles/src/common/var.scss
+++ b/packages/styles/src/common/var.scss
@@ -27,7 +27,7 @@ $--color-warning-light: mix($--color-white, $--color-warning, 80%) !default;
 $--color-danger-light: mix($--color-white, $--color-danger, 80%) !default;
 $--color-info-light: mix($--color-white, $--color-info, 80%) !default;
 
-$--color-primary-light: mix($--color-white, $--color-primary, 90%) !default;
+$--color-primary-lighter: mix($--color-white, $--color-primary, 90%) !default;
 $--color-success-lighter: mix($--color-white, $--color-success, 90%) !default;
 $--color-warning-lighter: mix($--color-white, $--color-warning, 90%) !default;
 $--color-danger-lighter: mix($--color-white, $--color-danger, 90%) !default;
