--- a/1.css
+++ b/1.css
@@ -31,7 +31,7 @@
   --v-error-lighten1: #f6361d;
   --v-error-darken1: #b40000;
   --v-error-darken2: #950000;
-  --v-error-darken3: #770000;
+  --v-error-darken3: #700;
   --v-error-darken4: #5c0000;
   --v-info-base: #42a5f5;
   --v-info-lighten5: #e4ffff;
@@ -64,34 +64,34 @@
   --v-warning-darken3: #a15400;
   --v-warning-darken4: #843c00;
   --v-background-base: #f2f3f7;
-  --v-background-lighten5: #ffffff;
-  --v-background-lighten4: #ffffff;
-  --v-background-lighten3: #ffffff;
-  --v-background-lighten2: #ffffff;
-  --v-background-lighten1: #ffffff;
+  --v-background-lighten5: #fff;
+  --v-background-lighten4: #fff;
+  --v-background-lighten3: #fff;
+  --v-background-lighten2: #fff;
+  --v-background-lighten1: #fff;
   --v-background-darken1: #d6d7db;
   --v-background-darken2: #babbbf;
   --v-background-darken3: #9fa0a4;
   --v-background-darken4: #858689;
   --v-neu-base: undefined;
   --v-neu-darken1: #dde4ef;
-  --v-neu-lighten1: #ffffff;
-  --v-primaryBgText-base: #ffffff;
-  --v-primaryBgText-lighten5: #ffffff;
-  --v-primaryBgText-lighten4: #ffffff;
-  --v-primaryBgText-lighten3: #ffffff;
-  --v-primaryBgText-lighten2: #ffffff;
-  --v-primaryBgText-lighten1: #ffffff;
+  --v-neu-lighten1: #fff;
+  --v-primaryBgText-base: #fff;
+  --v-primaryBgText-lighten5: #fff;
+  --v-primaryBgText-lighten4: #fff;
+  --v-primaryBgText-lighten3: #fff;
+  --v-primaryBgText-lighten2: #fff;
+  --v-primaryBgText-lighten1: #fff;
   --v-primaryBgText-darken1: #e2e2e2;
   --v-primaryBgText-darken2: #c6c6c6;
   --v-primaryBgText-darken3: #ababab;
   --v-primaryBgText-darken4: #919191;
-  --v-secondaryBgText-base: #ffffff;
-  --v-secondaryBgText-lighten5: #ffffff;
-  --v-secondaryBgText-lighten4: #ffffff;
-  --v-secondaryBgText-lighten3: #ffffff;
-  --v-secondaryBgText-lighten2: #ffffff;
-  --v-secondaryBgText-lighten1: #ffffff;
+  --v-secondaryBgText-base: #fff;
+  --v-secondaryBgText-lighten5: #fff;
+  --v-secondaryBgText-lighten4: #fff;
+  --v-secondaryBgText-lighten3: #fff;
+  --v-secondaryBgText-lighten2: #fff;
+  --v-secondaryBgText-lighten1: #fff;
   --v-secondaryBgText-darken1: #e2e2e2;
   --v-secondaryBgText-darken2: #c6c6c6;
   --v-secondaryBgText-darken3: #ababab;
